--- a/sass/templates/_menu.scss
+++ b/sass/templates/_menu.scss
@@ -7,7 +7,7 @@ nav[role="navigation"] {
 
 	@include respond-to(mobile) { 
     	@include gs-span(m, 2, 2);
-    	padding-top: $base-spacing-unit;
+    	padding-top: $half-spacing-unit;
     	text-align: $opdir;
     }
 }
@@ -24,4 +24,13 @@ nav[role="navigation"] {
   }
 }
 
+#menu-main {
+  @include respond-to(mobile) { 
+      display: none;
+  }
+}
 
+.jPanelMenu-panel {
+    background-image: url("../images/background.jpg") !important;
+    background-repeat: repeat;
+}
